# seestar-shell

./: .gitignore  README.md  pyproject.toml
certificates/: README.md  pem_inventory.json
certificates/metadata/: 3.0.0.json  3.0.1.json  3.0.2.json  3.1.0.json  3.1.1.json  3.1.2.json  3.2.0.json
certificates/pems/: Seestar_3.1.1_key0_a5abc56b8e6ee533.pem
seestar_shell/: __main__.py  cli.py  deploy.py  inventory.py  pack.py  upload.py
